--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -59,7 +59,8 @@
     right: 30px;
     width: 40%;
     height: 50px; }
-    .nav .menu > li {
+    .nav .menu li {
+      position: relative;
       float: right;
       text-align: center;
       vertical-align: middle;
@@ -68,7 +69,7 @@
       -ms-border-radius: 3px;
       -o-border-radius: 3px;
       border-radius: 3px; }
-      .nav .menu > li a {
+      .nav .menu li a {
         border: none;
         padding: 0 10px;
         -webkit-border-radius: 3px;
@@ -78,8 +79,24 @@
         border-radius: 3px;
         display: inline-block;
         color: #999; }
-        .nav .menu > li a:hover {
+        .nav .menu li a:hover {
           color: #ddd; }
+        .nav .menu li a .tipsnum {
+          position: absolute;
+          top: 7px;
+          left: 28px;
+          background: #fc5140;
+          color: #fff;
+          -webkit-border-radius: 8px;
+          -moz-border-radius: 8px;
+          -ms-border-radius: 8px;
+          -o-border-radius: 8px;
+          border-radius: 8px;
+          padding: 0 5px;
+          height: 16px;
+          line-height: 16px;
+          text-align: center;
+          font-size: 12px; }
 
 footer {
   color: #999;
@@ -95,6 +112,7 @@ footer {
     display: inline-block;
     margin-right: 20px; }
   footer .ft-meta {
+    float: right;
     vertical-align: middle;
     display: inline-block; }
     footer .ft-meta li {
