--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
     background: #fff;
     margin: 0px auto;
     width: 1000px;
-    min-height: 600px;
+    min-height: 650px;
     padding: 100px 0 50px 0;
     color: #666; }
     .main .main-wrapper:before, .main .main-wrapper:after {
@@ -33,7 +33,7 @@
     .sidebar .ad img {
       max-width: 100%; }
   .sidebar .back-action a {
-    font-size: 16px; }
+    font-size: 14px; }
 
 .new-post-btn {
   display: inline-block;
@@ -125,9 +125,13 @@
       width: 15%;
       float: left; }
 
+.last-reply-list h3 {
+  margin-bottom: 10px; }
 .last-reply-list ul li {
   padding-bottom: 5px;
   margin-bottom: 5px; }
+  .last-reply-list ul li a {
+    color: #666; }
   .last-reply-list ul li:before, .last-reply-list ul li:after {
     content: "";
     display: table; }
@@ -568,7 +572,9 @@
       line-height: 40px;
       height: 40px;
       float: left;
-      margin-right: 10px; }
+      width: 24px;
+      text-align: center;
+      margin: 0 2px; }
       .pager .pager-wrapper li a {
         vertical-align: middle;
         color: #ccc;
@@ -582,6 +588,24 @@
           color: #a1a1a1; }
 
 .message-list li {
+  padding: 10px 0; }
+
+.tips-list .action-bar {
+  margin: 15px 0; }
+  .tips-list .action-bar a {
+    margin-right: 10px;
+    padding: 10px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    color: #fff;
+    background: #999; }
+    .tips-list .action-bar a:hover {
+      background: #666; }
+.tips-list .tips-item {
+  border-bottom: 1px solid #ddd;
   padding: 10px 0; }
 
 .g-tip {
