--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -8,7 +8,7 @@
         background:#fff;
         margin:0px auto;
         width:1000px;
-        min-height:600px;
+        min-height:650px;
         padding:100px 0 50px 0;
         color:#666;
     }
@@ -40,7 +40,7 @@
     }
     .back-action{
         a{
-            font-size:16px; 
+            font-size:14px; 
         }
     }
 }
@@ -136,8 +136,14 @@
     }
 }
 .last-reply-list{
+    h3{
+        margin-bottom:10px;
+    }
     ul{
         li{
+            a{
+                color:#666; 
+            }
             @include clearfix();    
             padding-bottom:5px;
             margin-bottom:5px;
@@ -607,7 +613,9 @@
             line-height:40px;
             height:40px;
             float:left;
-            margin-right:10px;
+            width:24px;
+            text-align:center;
+            margin:0 2px;
             a{
                 vertical-align:middle;
                 color:#ccc;
@@ -629,6 +637,26 @@
 //message
 .message-list{
     li{
+        padding:10px 0;
+    }
+}
+//tips
+.tips-list{
+    .action-bar{
+        margin:15px 0; 
+        a{
+            margin-right:10px;     
+            padding:10px;
+            @include border-radius(5px);
+            color:#fff;
+            background:#999;
+            &:hover{
+                background:#666;
+            }
+        }
+    }
+    .tips-item{
+        border-bottom:1px solid #ddd;
         padding:10px 0;
     }
 }
