--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,16 +328,12 @@
 
 .reg-form, .login-form {
   padding: 50px 10%;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   width: 60%;
-  margin: 0 10%; }
+  margin: 0 10%;
+  text-align: center; }
+  .reg-form h1, .login-form h1 {
+    margin-bottom: 30px; }
   .reg-form .row, .login-form .row {
     position: relative;
     margin: 10px 0 0 0;
@@ -356,7 +352,9 @@
     -o-border-radius: 3px;
     border-radius: 3px;
     border: 1px solid #ddd;
-    vertical-align: middle; }
+    vertical-align: middle;
+    background: #f9f9f9;
+    text-align: left; }
   .reg-form label, .reg-form .tips, .login-form label, .login-form .tips {
     vertical-align: middle; }
   .reg-form label, .login-form label {
