--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -87,6 +87,12 @@ $menu-width:30px;
                     font-size:12px;
                 }
             }
+            .menu-avatar{
+                width:32px;
+                height:32px;
+                margin-right:10px;
+                @include border-radius(3px);
+            }
         }
     }
 }
