--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -246,6 +246,9 @@
             vertical-align:middle;
         }
         padding:2px 0 2px 14px;
+        a,a:hover{
+            color:#666;
+        }
         a:hover{
             text-decoration:underline; 
         }
