--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -1,11 +1,3 @@
-/*!
- * lion v1.0
- *
- * Copyright 2013 
- * Licensed under MIT
- *
- * @Author sp
- */
 html {
   font: 13px/1.7 "Helvetica Neue", Arial, "Hiragino Sans GB", "Microsoft YaHei", sans-serif; }
 
@@ -790,6 +782,8 @@ footer {
     left: 0;
     top: 8px;
     vertical-align: middle; }
+  .history-list li a, .history-list li a:hover {
+    color: #666; }
   .history-list li a:hover {
     text-decoration: underline; }
 
