--- a/public/css/img.css
+++ b/public/css/img.css
@@ -1,21 +1,17 @@
-.img-rounded {
+.user-avatar {
+  width: 48px;
+  height: 48px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -ms-border-radius: 5px;
   -o-border-radius: 5px;
   border-radius: 5px; }
 
-.img-boedered {
-  display: inline-block;
-  height: auto;
-  max-width: 100%;
-  padding: 4px;
-  background-color: #ffffff;
-  border: 1px solid #dddddd; }
-
-.img-circle {
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  -o-border-radius: 50%;
-  border-radius: 50%; }
+.user-avatar-origin {
+  width: 128px;
+  height: 128px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border-radius: 5px; }
