--- a/public/sass/btn.scss
+++ b/public/sass/btn.scss
@@ -3,21 +3,17 @@
 
 @import 'functions';
 
-$btn-height-base:20px;
-$btn-font-size:12px;
-$btn-padding:2px 3px;
-$btn-bg-base:#ddd;
-$btn-color-base:#111;
-
 .btn{
-    display:inline-block;
-    margin-bottom:0;
-    color:$btn-color-base;
-    font-size:$btn-font-size;
-    height:$btn-height-base;
-    line-height:$btn-height-base;
-    padding:$btn-padding $btn-padding;
-    background:$btn-bg-base;
+    background:$action-blue;
+    @include border-radius(3px);
+    padding:10px 15px;
+    color:#fff;
+    &:hover{
+        text-decoration:none;
+        background:$action-blue-hover;
+        color:#fff;
+        border:none;
+    }
     text-align:center;
     vertical-align:middle;
     cursor:pointer;
@@ -25,12 +21,6 @@ $btn-color-base:#111;
     &:focus{
         @include tab-focus(); 
     }
-    &:hover,&:focus{
-        color:$btn-color-base;
-        text-decoration:none;    
-    }
-
-
     &.disabled,
     &[disabled],
     fieldset[disabled] & {
