--- a/public/sass/img.scss
+++ b/public/sass/img.scss
@@ -1,22 +1,12 @@
 @import 'functions';
 
-$img-radius:5px;
-$img-border-color:#ddd;
-
-.img-rounded{
-    @include border-radius($img-radius);
+.user-avatar{
+    width:48px;
+    height:48px;
+    @include border-radius(5px);
 }
-
-.img-boedered{
-     display: inline-block;
-     height: auto;
-     max-width: 100%;
-     padding: 4px;
-     background-color: #ffffff;
-     border: 1px solid $img-border-color;
-}
-
-
-.img-circle{
-    @include border-radius(50%);
+.user-avatar-origin{
+    width:128px;
+    height:128px;
+    @include border-radius(5px);
 }
